# xmobar-config

./: my-xmobar.cabal  stack.yaml
src/: xmobar.hs
