name:           my-xmobar
version:        0.1.0.0
build-type:     Simple
cabal-version:  1.12

executable xmobar
  main-is: xmobar.hs
  other-modules:
  hs-source-dirs:
      src
  -- ghc-options: -threaded -rtsopts -with-rtsopts=-N
  ghc-options:         -Wall -Werror -fno-warn-missing-signatures -threaded
  build-depends:
      base
    , xmobar >= 0.32
  default-language: Haskell2010